Hozzávalok osztály és Hamburger osztály létrehozássa. Hozzávalok létrehozássa getter függvényekkelés kiíratással.Hambger pure virtual osztály létrehozássa. Methodusok alapanyagot elvez / hozzáadd és a hamburger kiíratása összetevök szerint.

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Hamburger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Hozzavalok.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ConsoleApplication1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Hamburger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Hozzavalok.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
