--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="SimaBurger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VegaBurger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SimaBurger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VegaBurger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
