udito osztály létrehozássa és vegaburger osztály javításudito osztály létrehozássa és vegaburger osztály javításaa

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -152,7 +152,9 @@
     <ClInclude Include="Sajtburger.h" />
     <ClInclude Include="SimaBurger.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SultKrumpli.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Udito.h" />
     <ClInclude Include="VegaBurger.h" />
   </ItemGroup>
   <ItemGroup>
@@ -167,6 +169,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SultKrumpli.cpp" />
+    <ClCompile Include="Udito.cpp" />
     <ClCompile Include="VegaBurger.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
