--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="SimaBurger.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SultKrumpli.h" />
+    <ClInclude Include="Szamla.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Udito.h" />
     <ClInclude Include="VegaBurger.h" />
@@ -172,6 +173,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="SultKrumpli.cpp" />
+    <ClCompile Include="Szamla.cpp" />
     <ClCompile Include="Udito.cpp" />
     <ClCompile Include="VegaBurger.cpp" />
   </ItemGroup>
