--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Udito.h" />
     <ClInclude Include="VegaBurger.h" />
+    <ClInclude Include="Vezerlo.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleApplication1.cpp" />
@@ -176,6 +177,7 @@
     <ClCompile Include="Szamla.cpp" />
     <ClCompile Include="Udito.cpp" />
     <ClCompile Include="VegaBurger.cpp" />
+    <ClCompile Include="Vezerlo.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
