--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Vezerlo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EgyediBurger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Vezerlo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EgyediBurger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
