--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Ceg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vasarlo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -99,6 +102,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Ceg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Vasarlo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
