--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="Vasarlo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Naplo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Vasarlo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Naplo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
